# Gelide

./: .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  defaultcfg.xml  gelide.desktop.in
data/icontheme/: Makefile.am
doc/: Gelide-configuration-file-format.txt  Makefile.am  SystemsAndEmulators-HowTo.es_ES.txt
help/: Makefile.am  gelide.1  gelide.omf.in
help/C/: gelide.xml
m4/: README
pixmap/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  de.po  es.po  es_ES.po  es_VE.po  fr_FR.po  it.po  pl.po  ru.po  sv.po
src/: Makefile.am  config.cpp  config.hpp  defines.hpp  gelide.cpp  gelide.hpp  gelide_i18n.hpp
src/core/: dat_reader.cpp  dat_reader.hpp  dat_reader_clrmamepro.cpp  dat_reader_clrmamepro.hpp  dat_reader_factory.cpp  dat_reader_factory.hpp  dat_reader_mamexml.cpp  default_systems.cpp  emulator.cpp  game.cpp  game.hpp  rom.hpp  system.cpp  system.hpp  system_manager.cpp  ver
src/core/datreader/: clrmamepro_reader.cpp  clrmamepro_reader.hpp  dat_reader.hpp  dat_reader_factory.cpp  dat_reader_factory.hpp  dat_reader_logiqxxml.cpp  dat_reader_logiqxxml.hpp  dat_reader_mamexml.hpp  dat_set.hpp  hyperspinxml_reader.cpp  hyperspinxml_reader.hpp  logiqxxml_reader.cpp  logiqxxml_reader.hpp  mamexml_reader.cpp  mamexml_reader.hpp
src/core/dbmanager/: collection.hpp  db_manager.cpp  db_manager.hpp  db_manager_collections.cpp  db_manager_emulators.cpp  db_manager_gamelists.cpp  db_manager_games.cpp  db_manager_gametypes.cpp  db_manager_genres.cpp  db_manager_letters.cpp  db_manager_manufacturers.cpp  db_manager_players.cpp  db_manager_ratings.cpp  db_manager_resources.cpp  db_manager_states.cpp  db_manager_tags.cpp  db_manager_times_played.cpp  db_manager_years.cpp  emulator.hpp  filter.hpp  game.hpp  game_list.hpp  genre.hpp  item.hpp  letter.hpp  manufacturer.hpp  players.hpp  rating.hpp  resource.hpp  rom.cpp  state.hpp  system.hpp  system_manager.cpp  system_manager.hpp  tag.hpp  times_played.hpp  type.hpp  year.hpp
src/core/metadb/: meta_db.cpp  meta_db.hpp  meta_db_set.hpp  meta_db_sets.cpp  meta_db_systems.cpp
src/gelide/: dialog_about.hpp  dialog_changelog.cpp  dialog_columns.cpp  dialog_columns.hpp  dialog_emulator_edit.cpp  dialog_emulator_edit.hpp  dialog_emulator_launcher.cpp  gelide.cpp  gelide.hpp  gelide_icons.cpp  gelide_icons.hpp  gelide_main.cpp  gelide_ui.cpp  gelide_ui_actions.cpp  model_columns.cpp  treeview_emulators.hpp  treeview_filters.cpp  treeview_systems.cpp
src/metadbm/: metadbm.cpp  metadbm.hpp  metadbm_main.cpp
src/ui/: dialog_about.cpp  dialog_changelog.hpp  dialog_columns.cpp  dialog_emulator_launcher.cpp  dialog_emulator_launcher.hpp  dialog_game_properties.cpp  dialog_game_properties.hpp  dialog_gamelist_generator.cpp  dialog_gamelist_generator.hpp  dialog_preferences.cpp  dialog_preferences.hpp  dialog_system_edit.cpp  dialog_system_edit.hpp  gelide_icons.cpp  gelide_ui.hpp  gelide_ui_actions.cpp  info_pannel.cpp  info_pannel.hpp  model_columns.hpp  statusbar.cpp  statusbar.hpp  treeview_emulators.cpp  treeview_filters.cpp  treeview_filters.hpp  treeview_games.cpp  treeview_games.hpp  treeview_systems.hpp
src/utils/: config.cpp  config.hpp  configurable_interface.hpp  crc32.cpp  crc32.hpp  debug.hpp  log.hpp  os_detect.hpp  parser.cpp  parser.hpp  process.cpp  process.hpp  sqlite.cpp  sqlite.hpp  sqlite_statement.cpp  sqlite_statement.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp  xml_parser.cpp  xml_parser.hpp  xml_reader.cpp  xml_reader.hpp  xml_writer.cpp  xml_writer.hpp
ui/: Makefile.am
ui/icons/: Makefile.am
