## Process this file with automake to produce Makefile.in

# Lugar de instalación de la documentación
gelide_docdir = ${prefix}/share/doc/gelide
gelide_doc_DATA = \
	SystemsAndEmulators-HowTo.es_ES.txt \
	Gelide-configuration-file-format.txt

EXTRA_DIST = \
	$(gelide_doc_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in
