## File created by the gnome-build tools

# Imágenes de los sistemas y emuladores
pixmapsdir = $(datadir)/gelide/pixmaps
pixmaps_DATA = \
	amstrad-gx4000.png \
	arcade-mame.png \
	arcade-raine.png \
	arcade-zinc.png \
	atari-2600.png \
	atari-5200.png \
	atari-7800.png \
	atari-jaguar.png \
	atari-lynx.png \
	bandai-wonderswan.png \
	bandai-wonderswancolor.png \
	boycottadvance-sdl.png \
	bsnes.png \
	coleco-colecovision.png \
	desmume.png \
	emerson-arcadia2001.png \
	entex-adventurevision.png \
	fairchild-channelf.png \
	fbzx.png \
	fceux.png \
	fuse.png \
	gambatte.png \
	gce-vectrex.png \
	generator.png \
	gens.png \
	gngb.png \
	gngeo.png \
	gnuboy.png \
	handysdl.png \
	hu-go.png \
	jzintv.png \
	magnavox-odyssey2.png \
	mame.png \
	mattel-intellivision.png \
	mednafen.png \
	mess.png \
	mupen64plus.png \
	nec-pcengine.png \
	nec-supergrafx.png \
	nestopia.png \
	nintendo-ds.png \
	nintendo-famicom.png \
	nintendo-gameboy.png \
	nintendo-gameboyadvance.png \
	nintendo-gameboycolor.png \
	nintendo-nes.png \
	nintendo-n64.png \
	nintendo-snes.png \
	osmose.png \
	raine.png \
	rca-studio2.png \
	regen.png \
	sdlmame.png \
	sdlmess.png \
	sega-32x.png \
	sega-gamegear.png \
	sega-mastersystem.png \
	sega-megadrive.png \
	sega-sg1000.png \
	sinclair-zxspectrum.png \
	snes9x-gtk.png \
	snk-neogeo.png \
	snk-neogeopocket.png \
	snk-neogeopocketcolor.png \
	spectemu.png \
	stella.png \
	virtualjaguar.png \
	visualboyadvance.png \
	xe.png \
	xmame.png \
	xmess.png \
	z26.png \
	zinc.png \
	zsnes.png

EXTRA_DIST = \
	$(pixmaps_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in

