## File created by the gnome-build tools

# Indicamos los subdirectorios a procesar
SUBDIRS = \
	icons

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in

# Ficheros glade para la interfaz
#gladedir = $(datadir)/gelide/ui

# Indicamos al código donde está el directorio glade
# Ummm, quizá esto lo ponga en el config.h por el configure.ac
#INCLUDES =  -DGELIDE_GLADEDIR=\""$(gladedir)/"\"
#glade_DATA = \
#	test.glade

#EXTRA_DIST = \
#	$(glade_DATA)

