## File created by the gnome-build tools

# Iconos de la interfaz de usuario
ui_iconsdir = $(datadir)/gelide/ui/icons
ui_icons_DATA = \
	gelide-all.png \
	gelide-available.png \
	gelide-columns.png\
	gelide-emulator.png \
	gelide-export-list.png \
	gelide-export-systems.png \
	gelide-favorite.png \
	gelide-horizontal-browser.png \
	gelide-import-systems.png \
	gelide-no-image.png \
	gelide-played.png \
	gelide-rank.png \
	gelide-show-browser.png \
	gelide-show-filters.png \
	gelide-show-images.png \
	gelide-system.png \
	gelide-unknown.png \
	gelide-vertical-browser.png \
	gelide-working.png \
	gelide-year.png

EXTRA_DIST = \
	$(ui_icons_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in
